<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
    android:background="@drawable/bg"
android:layout_height="match_parent"
android:orientation="vertical">

<LinearLayout
    android:id="@+id/container_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
</LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/container_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/buttonfirstColor" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/reservation"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/buttonfirstColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/buttonshape"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_medium"
                        android:layout_marginTop="2dp"
                        android:text="@string/myRemoteBooking"
                        android:gravity="center"
                        android:layout_alignParentTop="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/buttonfirstColor" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="04"

                        android:textColor="@android:color/black"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="60dp" />
                    <ImageView
                        android:layout_width="20dp"
                        android:src="@drawable/ic_booking_counter"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_gravity="left"
                        android:layout_height="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:background="@android:color/white"
                    android:orientation="horizontal">

                    <include android:id="@+id/layoutMostRecentBooking" layout="@layout/timer_layout"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/mostRecentBooking"
                    android:id="@+id/textView7"
                    android:textSize="11dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <View
                android:layout_width="1px"

                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="25dp"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"

                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/buttonshape"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/myApponitment"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/buttonfirstColor"
                        android:textSize="@dimen/textsize_medium" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="03"
                        android:textColor="@android:color/black"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="60dp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:src="@drawable/ic_appointment_counter"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_gravity="left"
                        android:layout_height="20dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:background="@android:color/white"
                    android:orientation="horizontal">
                    <include android:id="@+id/layoutMostRecentAppointment" layout="@layout/timer_layout"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/mostRecentAppointment"
                    android:id="@+id/textView9"
                    android:textSize="11dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"


            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:background="@drawable/locate_branch"
                android:gravity="center"
                android:id="@+id/LocationBranchButton"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/locateBranch"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_medium" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_locate_branch" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:id="@+id/RemoteBookingButton"
                    android:background="@drawable/remote_booking"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/remoteBooking"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_medium" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_remote_booking" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/book_appointment"
                    android:gravity="center"
                    android:id="@+id/BookAppointmentButton"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/bookAppointment"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_medium"

                        />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_book_appointment" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:background="@drawable/my_remote_booking"
                    android:gravity="center"
                    android:id="@+id/MyRemoteBookings"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/myRemoteBooking"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_medium" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_my_remote_booking" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/my_appointment"
                    android:gravity="center"
                    android:id="@+id/MyAppointmentButton"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/myApponitment"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_medium" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"

                        android:src="@drawable/ic_my_appointment" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>

</LinearLayout>



